--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "babel-runtime": "^6.23.0",
     "cloudinary-core": "^2.3.0",
     "gh-pages": "^1.0.0",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-day-picker": "^6.1.0",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.11"
   },
